--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@ mark { background: transparent; color: var(--accent); font-weight: 700; }
   <div class="logo">
     <div class="logo-icon">⚙️</div>
     <div>
-      <div class="logo-text">SPARE PARTS</div>
-      <div class="logo-sub">Equipment Lookup System</div>
+      <div class="logo-text">SE DEPARTMENT - SES TEAM</div>
+      <div class="logo-sub">Equipment & Spare Parts Lookup System</div>
     </div>
   </div>
   <div class="header-stat">RECORDS: <span id="total-count">—</span></div>
@@ -367,7 +367,7 @@ mark { background: transparent; color: var(--accent); font-weight: 700; }
 // ============================================================
 // ⚙️  BƯỚC DUY NHẤT CẦN LÀM: dán SHEET_ID của bạn vào đây
 //     Ví dụ: '1BxiMVs0XRA5nFMdKvBdBZjgmUUqptlbs74OgVE2upms'
-const SHEET_ID   = 'PASTE_YOUR_SHEET_ID_HERE';
+const SHEET_ID   = '1RsRVPaJW-RXV9kpy0_MvTdtEOGS8cuJpucaAd2-opkE';
 const SHEET_NAME = 'Sheet1'; // đổi nếu sheet tên khác
 // ============================================================
 
